[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/settings.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/label_opaque.tres" type="StyleBox" id=2]
[ext_resource path="res://resources/fonts/regular_big1.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/themes/theme0.tres" type="Theme" id=4]

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="."]
margin_left = 743.0
margin_top = 315.0
margin_right = 1136.0
margin_bottom = 699.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings_label" type="Label" parent="."]
margin_left = 764.001
margin_top = 335.394
margin_right = 1115.0
margin_bottom = 377.394
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "settings"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="volume_label" type="Label" parent="."]
margin_left = 764.001
margin_top = 394.791
margin_right = 1115.0
margin_bottom = 428.791
text = "volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgm_label" type="Label" parent="."]
margin_left = 764.001
margin_top = 434.791
margin_right = 1115.0
margin_bottom = 468.791
text = "music:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bgm_slider" type="HSlider" parent="."]
margin_left = 764.001
margin_top = 485.791
margin_right = 1115.0
margin_bottom = 501.791
step = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_label" type="Label" parent="."]
margin_left = 764.001
margin_top = 520.791
margin_right = 1115.0
margin_bottom = 554.791
text = "sound effects:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_slider" type="HSlider" parent="."]
margin_left = 764.001
margin_top = 578.791
margin_right = 1115.0
margin_bottom = 594.791
step = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok_button" type="Button" parent="."]
margin_left = 886.0
margin_top = 631.929
margin_right = 986.0
margin_bottom = 681.929
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ok_button" to="." method="_ok_pressed"]
